--- a/CCMS/CCMS.csproj
+++ b/CCMS/CCMS.csproj
@@ -45,10 +45,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -136,6 +144,27 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Sp_TrustedData_Search_Info_Result.cs">
+      <DependentUpon>TRUST_DATA_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TRUST_DATA_Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRUST_DATA_Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TRUST_DATA_Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRUST_DATA_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TRUST_DATA_Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TRUST_DATA_Model.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TRUST_DETAIL.cs">
+      <DependentUpon>TRUST_DATA_Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -4410,6 +4439,20 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="maps\images\pin24.png" />
+    <Content Include="maps\images\pin48.png" />
+    <Content Include="maps\leaf-demo.js" />
+    <Content Include="maps\markers.js" />
+    <Content Include="Models\TRUST_DATA_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TRUST_DATA_Model.edmx</DependentUpon>
+      <LastGenOutput>TRUST_DATA_Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\TRUST_DATA_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TRUST_DATA_Model.edmx</DependentUpon>
+      <LastGenOutput>TRUST_DATA_Model.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -4911,6 +4954,13 @@
     <Content Include="Scripts\angular-touch.min.js.map" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\errors.json" />
+    <EntityDeploy Include="Models\TRUST_DATA_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TRUST_DATA_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\TRUST_DATA_Model.edmx.diagram">
+      <DependentUpon>TRUST_DATA_Model.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
@@ -5695,7 +5745,6 @@
   <ItemGroup>
     <Folder Include="AngularJs\services\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -5709,6 +5758,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
