--- a/CCMS/CCMS.csproj
+++ b/CCMS/CCMS.csproj
@@ -221,9 +221,17 @@
     <Content Include="Content\assets\fonts\iconfont\MaterialIcons-Regular.svg" />
     <Content Include="Content\assets\fonts\poppins\poppins-v5-latin-regular.svg" />
     <Content Include="Content\assets\icons\address.png" />
+    <Content Include="Content\assets\icons\add_lodge.png" />
     <Content Include="Content\assets\icons\allcontacts.png" />
+    <Content Include="Content\assets\icons\BME_booking.png" />
+    <Content Include="Content\assets\icons\change_lodge.png" />
     <Content Include="Content\assets\icons\contacts.png" />
+    <Content Include="Content\assets\icons\inbond.png" />
+    <Content Include="Content\assets\icons\log_outbond.png" />
+    <Content Include="Content\assets\icons\query_person.png" />
     <Content Include="Content\assets\icons\summary.png" />
+    <Content Include="Content\assets\icons\upload_documents.png" />
+    <Content Include="Content\assets\icons\viewLodge.png" />
     <Content Include="Content\assets\images\animation-bg.jpg" />
     <Content Include="Content\assets\images\bg-01.jpg" />
     <Content Include="Content\assets\images\details_close.png" />
@@ -5765,6 +5773,7 @@
     <Content Include="Uploads\Inspection.pdf" />
     <Content Include="Views\Home\Trust.cshtml" />
     <Content Include="Views\Home\ReceiveInnbondCall.cshtml" />
+    <Content Include="Views\Home\CallCenter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
